[gd_scene load_steps=3 format=2]

[ext_resource path="res://Fonts/UI_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://views/scripts/choice_dialog.gd" type="Script" id=2]

[node name="ChoiceDialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.960784 )

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
margin_top = 0.56842
margin_bottom = 1279.43
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="Panel"]
anchor_left = 0.501
anchor_top = 0.487
anchor_right = 0.501
anchor_bottom = 0.82
margin_left = -262.839
margin_right = 262.161
margin_bottom = 0.160034
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YesButton" type="VBoxContainer" parent="Panel/Buttons"]
margin_right = 525.0
margin_bottom = 102.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Panel/Buttons/YesButton"]
margin_right = 525.0
margin_bottom = 2.0
rect_min_size = Vector2( 0, 2 )
color = Color( 0.160784, 0.447059, 0.419608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yes" type="Button" parent="Panel/Buttons/YesButton"]
margin_top = 6.0
margin_right = 525.0
margin_bottom = 102.0
rect_min_size = Vector2( 525, 96 )
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.992157, 0.988235, 0.941176, 1 )
custom_colors/font_color_hover = Color( 0.992157, 0.988235, 0.941176, 1 )
custom_colors/font_color_pressed = Color( 0.992157, 0.988235, 0.941176, 1 )
enabled_focus_mode = 0
text = "Ja"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoButton" type="VBoxContainer" parent="Panel/Buttons"]
margin_top = 106.0
margin_right = 525.0
margin_bottom = 214.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Panel/Buttons/NoButton"]
margin_right = 525.0
margin_bottom = 2.0
rect_min_size = Vector2( 0, 2 )
color = Color( 0.160784, 0.447059, 0.419608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No" type="Button" parent="Panel/Buttons/NoButton"]
margin_top = 6.0
margin_right = 525.0
margin_bottom = 102.0
rect_min_size = Vector2( 525, 96 )
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.992157, 0.988235, 0.941176, 1 )
custom_colors/font_color_hover = Color( 0.992157, 0.988235, 0.941176, 1 )
custom_colors/font_color_pressed = Color( 0.992157, 0.988235, 0.941176, 1 )
enabled_focus_mode = 0
text = "Nein"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Panel/Buttons/NoButton"]
margin_top = 106.0
margin_right = 525.0
margin_bottom = 108.0
rect_min_size = Vector2( 0, 2 )
color = Color( 0.160784, 0.447059, 0.419608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoiceText" type="Label" parent="Panel"]
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.25
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.992157, 0.988235, 0.941176, 1 )
text = "Choice Text"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="Panel/Buttons/YesButton/Yes" to="." method="_on_Yes_button_up"]
[connection signal="button_up" from="Panel/Buttons/NoButton/No" to="." method="_on_No_button_up"]
